--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
-github: [satnaing]
-buy_me_a_coffee: satnaing
+github: [kbtanvir]
+buy_me_a_coffee: kbtanvir
 
 # patreon: # Replace with a single Patreon username
 # open_collective: # Replace with a single Open Collective username
